@@ -1,6 +1,7 @@
 Revision history for constant-tiny
 
   - Bugfix: Avoid "redefine" warning if constant.pm is already loaded.
+  - Tests: Fix a mistake and skip the tests which are not relevant.
 
 1.00 - 2013.03.20 (SAPER)
   - First released version.
